Fix comment scrollbar thumb :hover color

--- a/public/css/index.css
+++ b/public/css/index.css
@@ -3,6 +3,7 @@
   --panel-bg: rgba(0, 0, 0, 0.555);
   --panel-h: rgba(146, 146, 146, 0.24);
   --panel-a: rgba(175, 175, 175, 0.24);
+  --black-panel-h: rgb(141, 141, 141);
   --pag-h: rgba(50, 50, 50, 0.622);
   --pag-a: rgba(86, 86, 86, 0.668);
   --text-2: rgb(196, 196, 196);
@@ -902,20 +903,6 @@ header {
   color: white;
 }
 
-.single > .comments > .comment > .dropdown {
-  background-color: black;
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  transform: translateY(-100%);
-  transition: transform .1s ease-in-out;
-  padding: 1.2rem;
-}
-
-.single > .comments > .comment > .dropdown form {
-  max-height: 100%;
-}
-
 .single > .comments .comment-header {
   padding: .2rem 1rem;
   background-color: var(--panel-bg);
@@ -972,12 +959,26 @@ header {
 |------------------------------------------------------------
 */
 
+.single > .comments > .comment > .dropdown {
+  background-color: black;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  transform: translateY(-100%);
+  transition: transform .1s ease-in-out;
+  padding: 1.2rem .4rem 0 .4rem;
+}
+
+.single > .comments > .comment > .dropdown form {
+  max-height: 100%;
+}
+
 .single > .comments .dropdown textarea {
   padding: .2rem .4rem;
   width: 100%;
   background-color: var(--panel-h);
-  margin-bottom: .4rem;
-  min-height: 4rem;
+  margin-bottom: .2rem;
+  min-height: 4.4rem;
   resize: none;
 }
 
@@ -997,7 +998,19 @@ header {
   border-radius: 10px;
   background-clip: padding-box;
   border: 3px solid transparent;
+  cursor: grab;
 }
+
+.single > .comments .dropdown textarea::-webkit-scrollbar-thumb:hover,
+.single > .comments > .new-comment textarea::-webkit-scrollbar-thumb:hover {
+  background-color: var(--black-panel-h);
+}
+
+/* Scrollbar :active pseudoelement is broken */
+/* .single > .comments .dropdown textarea::-webkit-scrollbar-thumb:active,
+.single > .comments > .new-comment textarea::-webkit-scrollbar-thumb:active {
+  cursor: grabbing;
+} */
 
 .single > .comments .dropdown textarea::-webkit-scrollbar-corner,
 .single > .comments > .new-comment textarea::-webkit-scrollbar-corner {
